--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,26 @@
     <script src="js.js"></script>
 
 </head>
-<body>
-    <h1>Just Getting Started</h1>
 
+<body>
+
+
+    <!--Navbar  -->
+    <nav>
+        <div class="navbarContainer">
+
+        <ul>
+            <li style="float:left"><a href="#">Joeann Journeys</a>
+            <li style="float:right"><a href="default.asp">Home</a></li>
+            <li style="float:right"><a href="news.asp">News</a></li>
+            <li style="float:right"><a href="contact.asp">Contact</a></li>
+            <li style="float:right"><a href="about.asp">About</a></li>
+        </ul>
+</div>
+    </nav>
     
+
+
 </body>
+
 </html>
