--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         </ul>
 </div>
     </nav>
+
+    <section></section>
+    <div class="area">
+   
+
+
+    </div>
+
+    <div class="searcharea">
+ <h1 class="mainheading"> Welcome to Joeanns Journeys</h1>
+
+    </div>
+
+
     
 
 
